<resources>
    <string name="rejept">拒绝</string>
    <string name="answer">接听</string>
    <string name="microphone">话筒</string>
    <string name="camera">摄像头</string>
    <string name="speaker">扬声器</string>
    <string name="putway">收起</string>
    <string name="invite_tips">等待对方接受邀请....</string>

    <!--"udesk_video_call_duration" = "通话时长：";-->

    <!--//agent-->
    <!--"udesk_video_call_agent_busy" = "对方忙线中";-->
    <!--"udesk_video_call_agent_decline" = "对方已拒绝";-->
    <!--"udesk_video_call_agent_cancel" = "已取消";-->
    <!--"udesk_video_call_agent_not_answered" = "对方无应答";-->

    <!--//customer-->
    <!--"udesk_video_call_customer_cancel" = "对方已取消";-->
    <!--"udesk_video_call_customer_decline" = "已拒绝";-->

    <string name="udesk_video_start">发起视频</string>
    <string name="udesk_video_cancle">已取消</string>
    <string name="udesk_video_over">聊天时长</string>
    <string name="udesk_video_reject">拒接</string>
    <string name="udesk_video_timeout">正忙</string>
    <string name="udesk_video_not_loggin">客服未登录视频</string>


    <string name="udesk_permission">您的手机没有授予悬浮窗权限，请开启后再试</string>
    <string name="udesk_open">现在去开启</string>
    <string name="udesk_ignore">暂不开启</string>



</resources>
