<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_video_chat_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="#ECEFF1">


    <FrameLayout
        android:id="@+id/big_video_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/small_video_view_container"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/switch_camera"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/udesk_switch_camera"
        android:visibility="gone" />


    <TextView
        android:id="@+id/invite_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/invite_tips"
        android:textColor="@color/colorffffff"
        android:textSize="17sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/udesk_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/colorffffff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/udesk_btn_mute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/udesk_btn_mute_img"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/udesk_mute_unselected" />

                <TextView
                    android:id="@+id/tab_mute_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/udesk_btn_mute_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/microphone"
                    android:textColor="@color/color1086ff"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/udesk_btn_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/udesk_btn_camera_img"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/udesk_camera_unselected" />

                <TextView
                    android:id="@+id/tab_camera_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/udesk_btn_camera_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/color1086ff"
                    android:textSize="12sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/udesk_btn_speaker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/udesk_btn_speaker_img"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/udesk_speaker_unselected" />

                <TextView
                    android:id="@+id/tab_speaker_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/udesk_btn_speaker_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/speaker"
                    android:textColor="@color/colorffffff"
                    android:textSize="12sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/udesk_btn_putway"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/udesk_btn_putway_img"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/udesk_putway" />

                <TextView
                    android:id="@+id/tab_putway_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/udesk_btn_putway_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/putway"
                    android:textColor="@color/colorffffff"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/hang_up"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="6dp"
                android:src="@drawable/udesk_hang_up" />

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/video_receive_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/udesk_video_agent_avatar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/agent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color555555"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/color555555"
                android:textSize="17sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/udesk_rejept"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/udesk_rejept_img"
                    android:layout_width="58dip"
                    android:layout_height="58dip"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/udesk_hang_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/udesk_rejept_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/rejept"
                    android:textColor="@color/color666666"
                    android:textSize="12sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/udesk_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/udesk_answer_img"
                    android:layout_width="58dip"
                    android:layout_height="58dip"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/udesk_answer" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/udesk_answer_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/answer"
                    android:textColor="@color/color666666"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
